[gd_scene load_steps=7 format=3 uid="uid://b26veb0f2qvil"]

[ext_resource type="Script" path="res://script/belong_to_boss/normal_attack.gd" id="1_4wh2q"]
[ext_resource type="Texture2D" uid="uid://cprmp56avc76g" path="res://assets/boss/Boss attack.png" id="2_pibh3"]
[ext_resource type="AudioStream" uid="uid://c7p6rmhs5bxy3" path="res://assets/sfx/hitHurt_balls.wav" id="3_o7cof"]

[sub_resource type="CircleShape2D" id="CircleShape2D_7fvr4"]
radius = 19.0

[sub_resource type="Animation" id="Animation_f14br"]
resource_name = "glitch"
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(1),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"enable_movement"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_5cuaf"]
_data = {
"glitch": SubResource("Animation_f14br")
}

[node name="Area2D" type="Area2D" groups=["obstacle"]]
script = ExtResource("1_4wh2q")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_pibh3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_7fvr4")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(0.499999, -0.5)
scale = Vector2(0.95, 0.75)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_5cuaf")
}

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_o7cof")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
